--- a/style.css
+++ b/style.css
@@ -23,6 +23,27 @@
     width: 1200px;
     margin: 0 auto;
 }
+.nav-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.mobile-navbar-btn{
+  display: none;
+  background: transparent;
+  cursor: pointer;
+
+}
+.mobile-nav-icon{
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.mobile-nav-icon[name = "close-outline"]{
+  display: none;
+}
 
 .navbar{
     display: flex;
@@ -666,6 +687,7 @@ footer{
 }
 
 
+
 @media(max-width:1300px){
   .page-header{
     padding-top: 30px;
@@ -733,8 +755,94 @@ footer{
     scale: 0.55;
   }
 
+  .mobile-navbar-btn{
+    display: block !important;
+    z-index: 999;
+    border: 1px solid black;
+  }
+  .navbar{
+    /* display: none; */
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    position: absolute;
+    top: -450% !important;
+    left: 0;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transform: translateX(100%);
+    transition: all 0.5s linear;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 99;
+  }
+
+  .nav-items{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .active .navbar{
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .active .mobile-navbar-btn .mobile-nav-icon[name = "close-outline"]{
+    display: block;
+  }
+  .active .mobile-navbar-btn .mobile-nav-icon[name = "menu-outline"]{
+    display: none;
+  }
+  .nav-container{
+    position: relative;
+  }
+
+  .hero-section{
+    flex-direction: column;
+    gap: 3rem;
+    padding-bottom: 6rem;
+    
+}
+
+.hero-section-left{
+  transform: translateX(25%);
+  gap: 1rem;
+}
+
+.fadded-text{
+  font-size: 4.5rem;
+  bottom: -9.3%;
+  left: 30%;
+  
+}
+
+.skills-container{
+  
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+.skill-fade-text{
+  
+  bottom: -18%;
+  right: 8%;
+  font-size: 12em;
+  
+}
+  
+}
 
 
+
+@media(max-width:1300px){
 
 }
 
