--- a/style.css
+++ b/style.css
@@ -812,28 +812,33 @@ footer{
 }
 
 .hero-section-left{
-  transform: translateX(25%);
+  
   gap: 1rem;
+}
+
+.hero-section-right{
+  transform: translateX(-60%);
 }
 
 .fadded-text{
   font-size: 4.5rem;
   bottom: -9.3%;
-  left: 30%;
+  left: 8%;
   
 }
+
 
 .skills-container{
   
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   gap: 3rem;
 }
 
 .skill-fade-text{
   
   bottom: -18%;
-  right: 8%;
+  right: 28%;
   font-size: 12em;
   
 }
@@ -842,8 +847,10 @@ footer{
 
 
 
-@media(max-width:1300px){
-
+@media(max-width:980px){
+  .nav-container{
+    width: 75%;
+  }
 }
 
 
