--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ footer{
     width: 90%;
   }
   .hero-section-heading{
-    font-size: 25px;
+    font-size: 20px;
   }
   
   .hero-section-description{
@@ -926,7 +926,7 @@ footer{
   .skill-fade-text{
     font-size: 10rem;
     right: -12%;
-    bottom: -15%;
+    bottom: -11.5%;
   }
   .contactus-heading{
     font-size: 2.5em;
@@ -938,11 +938,14 @@ footer{
     transform: translateX(-8%);
   }
   #submit-btn{
-    font-size: 1.2rem;
+    font-size: 0.6rem;
   }
   .submit-icon{
-    font-size: 1.2rem;
-    padding: 0 0.5rem;
+    font-size: 0.6rem;
+    
+  }
+  .btn-pink{
+    padding: 0.8rem 2rem;
   }
   .link-wrapper{
     transform: translateX(-30%);
